Added more tests and minor changes